# simpleHttpServer

./: CMakeCache.txt  CMakeLists.txt  README.md  Server.cpp  Server.h  main.cpp
built/: CMakeCache.txt  Makefile  cmake_install.cmake  simpleHttpServer  simpleHttpServer.cbp
example/: main.cpp
